samples/_failures_safe/1761251708_d9edb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_673df3a7.c: In function ‘main’:
./samples/SAFE/__tmp_673df3a7.c:195:5: error: expected declaration or statement at end of input
  195 |     int token_count = tokenize(input, tokens, MAX_TOKENS);
      |     ^~~
